--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,40 @@
 {
-   // Use IntelliSense to find out which attributes exist for C# debugging
-   // Use hover for the description of the existing attributes
-   // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-   "version": "0.2.0",
-   "configurations": [
+    // Use IntelliSense to find out which attributes exist for C# debugging
+    // Use hover for the description of the existing attributes
+    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
+    "version": "0.2.0",
+    "configurations": [
         {
-            "name": ".NET Core Launch (console)",
+            "name": "Debug convert whole database",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/Azunyuuuuuuu.DivaToQuaverConverter/bin/Debug/netcoreapp3.1/Azunyuuuuuuu.DivaToQuaverConverter.dll",
             "args": [],
+            "cwd": "${workspaceFolder}",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
+            "name": "Debug converting .dsc files",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/Azunyuuuuuuu.DivaToQuaverConverter/bin/Debug/netcoreapp3.1/Azunyuuuuuuu.DivaToQuaverConverter.dll",
+            "args": [
+                "dsc",
+                "--input",      "input/rom/script/pv_002_easy.dsc",
+                "--output",     "output/pv_002_easy.qua",
+                "--audio",      "input/rom/sound/song/pv_002.ogg",
+                "--title",      "ワールドイズマイン",
+                "--artist",     "ryo",
+                "--creator",    "SEGA",
+                "--difficulty", "easy",
+                "--bpm",        "165",
+            ],
             "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
