--- a/Azunyuuuuuuu.DivaToQuaverConverter/Azunyuuuuuuu.DivaToQuaverConverter.csproj
+++ b/Azunyuuuuuuu.DivaToQuaverConverter/Azunyuuuuuuu.DivaToQuaverConverter.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="CliFx" Version="1.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Quaver.API\Quaver.API\Quaver.API.csproj" />
+  </ItemGroup>
+
 </Project>
