--- a/Azunyuuuuuuu.DivaToQuaverConverter/Azunyuuuuuuu.DivaToQuaverConverter.csproj
+++ b/Azunyuuuuuuu.DivaToQuaverConverter/Azunyuuuuuuu.DivaToQuaverConverter.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="CliFx" Version="1.3.2" />
+    <PackageReference Include="CliWrap" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
